[gd_scene load_steps=53 format=3 uid="uid://c47t04547xgiv"]

[ext_resource type="Script" uid="uid://gsgp707rx6fo" path="res://src/soldier.gd" id="1_u8ado"]
[ext_resource type="Texture2D" uid="uid://qge66yf17jud" path="res://file/character/soldier/Soldier Attack 1.png" id="2_ptrgl"]
[ext_resource type="Texture2D" uid="uid://cay2msoxpug2y" path="res://file/character/soldier/Soldier Attack 2.png" id="3_cy618"]
[ext_resource type="Texture2D" uid="uid://df83qtgqsp447" path="res://file/character/soldier/Soldier Idle.png" id="5_08bl5"]
[ext_resource type="Texture2D" uid="uid://iomcq4lauq3g" path="res://file/character/soldier/Soldier Run.png" id="6_5ix1c"]
[ext_resource type="Texture2D" uid="uid://ca0bt5qb4w6vl" path="res://file/character/soldier/Soldier Walk.png" id="8_3f3g7"]
[ext_resource type="Texture2D" uid="uid://dxv3y6yrdf47r" path="res://file/character/soldier/Soldier Attack 3.png" id="10_r1u0s"]
[ext_resource type="Texture2D" uid="uid://d0feasgrom121" path="res://file/character/soldier/Soldier Dead.png" id="11_87ii4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1ucn"]
size = Vector2(40, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_n2d8v"]
atlas = ExtResource("2_ptrgl")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1xuh"]
atlas = ExtResource("2_ptrgl")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1ucn"]
atlas = ExtResource("2_ptrgl")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cy618"]
atlas = ExtResource("2_ptrgl")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2h7i"]
atlas = ExtResource("2_ptrgl")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_08bl5"]
atlas = ExtResource("2_ptrgl")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ix1c"]
atlas = ExtResource("3_cy618")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4j0s"]
atlas = ExtResource("3_cy618")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1u0s"]
atlas = ExtResource("3_cy618")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_87ii4"]
atlas = ExtResource("3_cy618")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7xda"]
atlas = ExtResource("10_r1u0s")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo8kl"]
atlas = ExtResource("10_r1u0s")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3wke"]
atlas = ExtResource("10_r1u0s")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4th2"]
atlas = ExtResource("10_r1u0s")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4kf1"]
atlas = ExtResource("11_87ii4")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8cdag"]
atlas = ExtResource("11_87ii4")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_72may"]
atlas = ExtResource("11_87ii4")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7gfbp"]
atlas = ExtResource("11_87ii4")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_25nnx"]
atlas = ExtResource("11_87ii4")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2emr"]
atlas = ExtResource("11_87ii4")
region = Rect2(653, 0, 115, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ln6c"]
atlas = ExtResource("5_08bl5")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7lptf"]
atlas = ExtResource("5_08bl5")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g6x8b"]
atlas = ExtResource("5_08bl5")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_65g4y"]
atlas = ExtResource("5_08bl5")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mafvr"]
atlas = ExtResource("6_5ix1c")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_g2nbq"]
atlas = ExtResource("6_5ix1c")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fgif7"]
atlas = ExtResource("6_5ix1c")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrsmf"]
atlas = ExtResource("6_5ix1c")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3hvp"]
atlas = ExtResource("6_5ix1c")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5jph"]
atlas = ExtResource("6_5ix1c")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4igeu"]
atlas = ExtResource("6_5ix1c")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qp2in"]
atlas = ExtResource("8_3f3g7")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptrgl"]
atlas = ExtResource("8_3f3g7")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nmrsm"]
atlas = ExtResource("8_3f3g7")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cqvwq"]
atlas = ExtResource("8_3f3g7")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj3hh"]
atlas = ExtResource("8_3f3g7")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n50fd"]
atlas = ExtResource("8_3f3g7")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_2t8t5"]
atlas = ExtResource("8_3f3g7")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vk281"]
atlas = ExtResource("8_3f3g7")
region = Rect2(896, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_map1f"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n2d8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1xuh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1ucn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cy618")
}],
"loop": false,
"name": &"attack_1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2h7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_08bl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ix1c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4j0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1u0s")
}],
"loop": false,
"name": &"attack_2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87ii4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7xda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo8kl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3wke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4th2")
}],
"loop": false,
"name": &"attack_3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4kf1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8cdag")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72may")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7gfbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25nnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2emr")
}],
"loop": false,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ln6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7lptf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g6x8b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_65g4y")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mafvr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g2nbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fgif7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrsmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3hvp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5jph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4igeu")
}],
"loop": true,
"name": &"run",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qp2in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptrgl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nmrsm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cqvwq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj3hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n50fd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2t8t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vk281")
}],
"loop": true,
"name": &"walk",
"speed": 6.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0i558"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3f3g7"]
bg_color = Color(0.3285419, 0.68161446, 0.51560247, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
anti_aliasing = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t5i3t"]
size = Vector2(53, 60)

[node name="Soldier" type="Node2D"]
script = ExtResource("1_u8ado")
_animations_path = NodePath("UnitArea/Animations")
wait_attack_timer_path = NodePath("UnitArea/WaitAttackTimer")
_unit_area_path = NodePath("UnitArea")
_unit_collision_path = NodePath("UnitArea/CollisionShape2D")
_attack_area_path = NodePath("AttackArea")
_attack_collision_path = NodePath("AttackArea/CollisionShape2D")

[node name="UnitArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="UnitArea"]
position = Vector2(0, -2)
shape = SubResource("RectangleShape2D_s1ucn")

[node name="Animations" type="AnimatedSprite2D" parent="UnitArea"]
position = Vector2(-35, -100)
sprite_frames = SubResource("SpriteFrames_map1f")
animation = &"walk"
frame_progress = 0.8568919
centered = false

[node name="WaitAttackTimer" type="Timer" parent="UnitArea"]
one_shot = true

[node name="ProgressBar" type="ProgressBar" parent="UnitArea"]
offset_left = -22.0
offset_top = -45.0
offset_right = 23.0
offset_bottom = -40.0
theme_override_styles/background = SubResource("StyleBoxFlat_0i558")
theme_override_styles/fill = SubResource("StyleBoxFlat_3f3g7")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(26.5, -2)
shape = SubResource("RectangleShape2D_t5i3t")

[connection signal="animation_changed" from="UnitArea/Animations" to="UnitArea" method="_on_animations_animation_changed"]
[connection signal="animation_finished" from="UnitArea/Animations" to="UnitArea" method="_on_animations_animation_finished"]
